code/tui/snapshots/fullscreen/usage/usage_partial_failure.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 100, 24)"
---
  .                                                                                    [Dashboard]

> /usage    ┌── Usage ────────────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │   BigModel    ChatGPT    xAI                                            │
            │                                                                         │
            │> Status  ·  Could not load account usage. Run /usage to retry.          │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Tab/Shift+Tab to switch  ·  Esc to close  ·  Run /usage to refresh
