code/tui/snapshots/fullscreen/usage/usage_reserve_chinese_fullscreen_narrow.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 48, 28)"
---
  .                                   [仪表盘]


  ┌── 额度 ──────────────────────────────[✗]─┐
  │                                          │
  │> ChatGPT 套餐  ·  pro                    │
  │                                          │
  │  Codex 额度 ──────────────────────────── │
  │  5h 额度  ·  剩余 65%（已用 35%）        │
  │  重置时间  ·  2033-05-18 03:33 UTC       │
  │  7d 额度  ·  剩余 20%（已用 80%）        │
  │  重置时间  ·  2033-05-23 22:26 UTC       │
  │                                          │
  │  gpt-reserve 额度 ────────────────────── │
  │  模型  ·  gpt-5.6-luna                   │
  │  7d 额度  ·  剩余 100%（已用 0%）        │
  │  重置时间  ·  2033-05-23 22:26 UTC       │
  │  点数  ·  10.25                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  │                                          │
  └──────────────────────────────────────────┘
  > 构建任何内容
  ────────────────────────────────── 自动模型

  Esc 关闭  ·  运行 /usage 刷新
