code/tui/snapshots/fullscreen/usage/usage_subscriptions.snap
---
source: code/tui/src/app/usage_tests.rs
expression: screen
---
  .                                                                [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │   ChatGPT    xAI                                             │
        │                                                              │
        │> xAI plan  ·  Not reported                                   │
        │  Access  ·  Unavailable                                      │
        │  Credits used  ·  105.125%                                   │
        │  Period  ·  Not reported                                     │
        │  Resets  ·  Not reported                                     │
        │  Prepaid  ·  Not reported                                    │
        │  On-demand used  ·  Not reported                             │
        │  On-demand cap  ·  Not reported                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────└──────────────────────────────────────────────────────────────┘──────
  > Build anything
  ─────────────────────────────────────────────────────────── Automatic model

  Tab/Shift+Tab to switch  ·  Esc to close  ·  Run /usage to refresh
